# AI-Resume-Matcher-Test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.sh
backend/: main.py  requirements.txt  seed_data.py
backend/app/: auth.py  database.py  llm.py  models.py
backend/app/schemas/: job.py  match.py  resume.py  user.py
frontend/: app.py  requirements.txt
