[tool.poetry]
name = "ai-resume-matcher"
version = "0.1.0"
description = "An AI-powered resume matching application"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"

# Backend
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.3.0"}
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
python-multipart = "^0.0.6"
PyJWT = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
google-generativeai = "^0.3.0"
pdfminer-six = "^20221105"

# Frontend
streamlit = "^1.26.0"
requests = "^2.31.0"
pandas = "^2.1.0"
pypdf2 = "^3.0.1"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"